--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
 <body>
     <nav>
         <div class="nav-container">
-            <h1>Flask ML Web App</h1>
+            <h1>Flask Hacknyu</h1>
             <ul>
                 <li><a href="{{ url_for('index') }}">Home</a></li>
                 <li><a href="{{ url_for('about') }}">About</a></li>
