--- a/templates/base.html
+++ b/templates/base.html
@@ -7,22 +7,12 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body>
-    <nav>
-        <div class="nav-container">
-            <h1>Flask Hacknyu</h1>
-            <ul>
-                <li><a href="{{ url_for('index') }}">Home</a></li>
-                <li><a href="{{ url_for('about') }}">About</a></li>
-            </ul>
-        </div>
-    </nav>
-    
     <main>
         {% block content %}{% endblock %}
     </main>
     
     <footer>
-        <p>&copy; 2025 Flask ML Web App. Built for HackNYU2025.</p>
+        <p>&copy; HackNYU 2025</p>
     </footer>
     
     <script src="{{ url_for('static', filename='js/main.js') }}"></script>
