--- a/static/css/style.css
+++ b/static/css/style.css
@@ -15,6 +15,11 @@
 
 .main {
     width: 70%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 2rem;
 }
 
 .chat {
@@ -36,4 +41,39 @@
 .log > p {
     margin-bottom: 0.5rem;
     font-size: 1.1rem;
+}
+
+.timer {
+    padding: 1.5rem;
+    background-color: lightgray;
+    border-radius: 0.5rem;
+    font-size: 1.5rem;
+    font-weight: bold;
+    border: 1px solid gray;
+}
+
+.center {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.center > img {
+    width: 200px;
+    height: auto;
+
+    border-radius: 0.5rem;
+    border: 1px solid gray;
+}
+
+.input {
+    padding: 1.5rem;
+    background-color: lightgray;
+    border-radius: 0.5rem;
+    font-size: 1.5rem;
+    border: 1px solid gray;
+
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
