added character img click for record functionality

--- a/templates/index.html
+++ b/templates/index.html
@@ -13,11 +13,11 @@
                 <p> 00:15 </p>
             </div>
 
-            <div class="character-img">
+            <button class="character-img">
                 <p class="dialogue"> Hey, you gotta lock in! </p>
 
                 <img src="{{ url_for('static', filename='images/sample.jpg') }}" alt="Conscience AI Logo">
-            </div>
+            </button>
         </div>
 
         <div class="input">
@@ -36,8 +36,6 @@
 
         <div class="log">
             <p>Bot: Welcome to the AI Chat! Ask me anything.</p>
-            <p>Welcome to the AI Chat! Ask me anything.</p>
-            <p>Welcome to the AI Chat! Ask me anything.</p>
         </div>
     </div>
 </div>
