--- a/static/css/style.css
+++ b/static/css/style.css
@@ -136,6 +136,12 @@ input:focus {
     width: 100%;
     height: 100%;
     border-radius: 100%;
+    border: 3px solid black;
+}
+.character-img > img:hover {
+    border: 3px solid white;
+    cursor: pointer;
+    transform: scale(1.05);
 }
 
 .dialogue {
