--- a/templates/index.html
+++ b/templates/index.html
@@ -44,8 +44,8 @@
 {% block scripts %}
 <script>
     // Set capture intervals from backend environment variables
-    // Store in window object so main.js can access them
-    window.TIME_INTERVAL_SCREEN_CAPTURE = {{ screen_capture_interval }};
-    window.TIME_INTERVAL_CAMERA_CAPTURE = {{ camera_capture_interval }};
+    // Store in globalThis so main.js can access them
+    globalThis.TIME_INTERVAL_SCREEN_CAPTURE = {{ screen_capture_interval }};
+    globalThis.TIME_INTERVAL_CAMERA_CAPTURE = {{ camera_capture_interval }};
 </script>
 {% endblock %}
