--- a/static/css/style.css
+++ b/static/css/style.css
@@ -61,6 +61,7 @@ input:focus {
     width: 70%;
     gap: 2rem;
     position: relative;
+    z-index: 2;
 }
 
 .main > h1 {
@@ -78,8 +79,12 @@ input:focus {
 
 .chat {
     width: 30%;
-    background-color: transparent;
+    background-color: rgba(0, 0, 0, 0.3);
+    backdrop-filter: blur(4px);
+    border-left: 2px solid black;
     padding: 0.7rem;
+    position: relative;
+    z-index: 1;
 }
 
 .chat > h2 {
@@ -120,14 +125,14 @@ input:focus {
     left: 0;
     top: 30%;
     height: 60%;
-    width: 100%;
+    width: 70%;
 
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
 
-    padding-right: 5%;
+    padding: 0 10%;
 }
 
 .character-img {
@@ -169,7 +174,6 @@ input:focus {
 }
 
 .input {
-    margin-left: 25%;
     background-color: white;
     border-radius: 0;
     font-size: 1.5rem;
@@ -182,14 +186,10 @@ input:focus {
     justify-content: space-between;
     width: 80%;
     max-width: 600px;
-    margin: 0 auto;
-    margin-bottom: 2rem;
 
     overflow: hidden;
-    position: absolute;
-    bottom: 2rem;
-    left: 50%;
-    transform: translateX(-50%);
+    position: relative;
+    margin-bottom: 2rem;
 }
 
 .input-text {
@@ -197,6 +197,7 @@ input:focus {
     font-size: 0.7rem;
     flex-grow: 1;
     margin-left: 0.8rem;
+    margin-right: 0.8rem;
     font-family: 'Press Start 2P', cursive;
     outline: none;
 }
@@ -219,11 +220,11 @@ input:focus {
 }
 .submit-btn:hover {
     background-color: #45a049;
-    transform: translate(-2px, -2px);
+    transform: scale(1.05);
     box-shadow: 2px 2px 0px rgba(0, 0, 0, 0.3);
 }
 .submit-btn:active {
-    transform: translate(0px, 0px);
+    transform: scale(1);
     box-shadow: none;
 }
 
