working audio input

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,10 @@
         <div class="timer">
             <p> 00:15 </p>
         </div>
+        
+        <div>
+            <button class"screen-btn>Start screen capture.</button>
+        </div>
 
         <div class="center">
             <button class="character-img">
