--- a/templates/index.html
+++ b/templates/index.html
@@ -4,16 +4,16 @@
 
 {% block content %}
 <div class="container">
-    
+
     <div class="main">
         <h1> Conscience AI </h1>
 
         <div class="timer">
             <p> 00:15 </p>
         </div>
-        
+
         <div>
-            <button class"screen-btn>Start screen capture.</button>
+            <button class="screen-btn">Start capture.</button>
         </div>
 
         <div class="center">
