--- a/templates/index.html
+++ b/templates/index.html
@@ -8,12 +8,12 @@
     <div class="main">
         <h1> Conscience AI </h1>
 
-        <div class="timer">
-            <p> 00:15 </p>
+        <div class="capture-controls">
+            <button class="screen-btn">Start capture.</button>
         </div>
 
-        <div>
-            <button class="screen-btn">Start capture.</button>
+        <div class="timer">
+            <p> 00:15 </p>
         </div>
 
         <div class="center">
