--- a/static/css/style.css
+++ b/static/css/style.css
@@ -57,13 +57,13 @@ input:focus {
 
 .main {
     padding: 0% 10%;
-    
+
     width: 70%;
     gap: 2rem;
     position: relative;
 }
 
-.main > h1 {
+.main>h1 {
     margin-top: 4rem;
     margin-bottom: 3rem;
 
@@ -82,7 +82,7 @@ input:focus {
     padding: 0.7rem;
 }
 
-.chat > h2 {
+.chat>h2 {
     margin-top: 0.4rem;
     margin-bottom: 1rem;
     font-size: 1.2rem;
@@ -94,7 +94,8 @@ input:focus {
 .log {
     padding: 0.5rem;
 }
-.log > p {
+
+.log>p {
     color: white;
     margin-bottom: 0.7rem;
     font-size: 0.6rem;
@@ -113,6 +114,8 @@ input:focus {
     border: 4px solid #000;
     box-shadow: 4px 4px 0px rgba(0, 0, 0, 0.3);
     text-align: center;
+    position: relative;
+    z-index: 20;
 }
 
 .center {
@@ -128,6 +131,14 @@ input:focus {
     justify-content: space-between;
 
     padding-right: 5%;
+    z-index: 10;
+}
+
+.capture-controls {
+    position: relative;
+    z-index: 20;
+    margin-top: 1rem;
+    margin-bottom: 0.5rem;
 }
 
 .character-img {
@@ -137,13 +148,14 @@ input:focus {
     height: auto;
 }
 
-.character-img > img {
+.character-img>img {
     width: 100%;
     height: 100%;
     border-radius: 100%;
     border: 3px solid black;
 }
-.character-img > img:hover {
+
+.character-img>img:hover {
     border: 3px solid white;
     cursor: pointer;
     transform: scale(1.05);
@@ -217,17 +229,19 @@ input:focus {
     align-items: center;
     justify-content: center;
 }
+
 .submit-btn:hover {
     background-color: #45a049;
     transform: translate(-2px, -2px);
     box-shadow: 2px 2px 0px rgba(0, 0, 0, 0.3);
 }
+
 .submit-btn:active {
     transform: translate(0px, 0px);
     box-shadow: none;
 }
 
-.submit-btn > img {
+.submit-btn>img {
     width: 100%;
     height: 100%;
 }
@@ -238,7 +252,7 @@ input:focus {
         width: 140px;
         font-size: 1rem;
     }
-    
+
 }
 
 @media screen and (min-height: 800px) {
