--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,11 @@
             🌳 Go to Farm
         </a>
 
+        <div class="coin-display">
+            <span class="coin-label">Coins:</span>
+            <span class="coin-value" id="mainCoins">1000</span>
+        </div>
+
         <div class="timer">
             <p> 00:15 </p>
         </div>
