--- a/static/css/style.css
+++ b/static/css/style.css
@@ -198,18 +198,67 @@ input:focus {
 .character-img {
     border-radius: 100%;
     position: relative;
-    width: 200px;
+    width: 120px;
     height: auto;
+    background: transparent;
+    border: none;
+    padding: 0;
 }
 
-.character-img > img {
+.animated-character {
+    position: relative;
+    width: 120px;
+    height: 120px;
+    border-radius: 100%;
+    overflow: hidden;
+    background: transparent;
+}
+
+.char-frame {
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 100%;
     object-fit: cover;
     border-radius: 100%;
     border: 3px solid black;
+    opacity: 0;
+    animation: characterAnimation 1.5s infinite;
+    transition: opacity 0.2s ease-in-out;
 }
-.character-img > img:hover {
+
+.char-frame.frame-1 {
+    animation-delay: 0s;
+}
+
+.char-frame.frame-2 {
+    animation-delay: 0.5s;
+}
+
+.char-frame.frame-3 {
+    animation-delay: 1s;
+}
+
+@keyframes characterAnimation {
+    0% {
+        opacity: 0;
+    }
+    2% {
+        opacity: 1;
+    }
+    32% {
+        opacity: 1;
+    }
+    34% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 0;
+    }
+}
+
+.character-img:hover .char-frame {
     border: 3px solid white;
     cursor: pointer;
     transform: scale(1.05);
@@ -217,21 +266,23 @@ input:focus {
 
 .dialogue {
     position: absolute;
-    top: -35%;
-    left: 40%;
-    width: 200px;
+    top: -50%;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 180px;
 
-    font-size: 0.7rem;
+    font-size: 0.6rem;
     color: black;
     font-weight: bold;
-    line-height: 1.4rem;
+    line-height: 1.3rem;
 
     background-color: rgba(255, 255, 255, 0.9);
-    padding: 1rem;
+    padding: 0.8rem;
     border-radius: 0;
     border: 3px solid #000;
     box-shadow: 3px 3px 0px rgba(0, 0, 0, 0.3);
     z-index: 1;
+    text-align: center;
 }
 
 .input {
