--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}HackNYU{% endblock %}
+{% block title %}Your AI Conscience{% endblock %}
 
 {% block content %}
 <div class="container">
